--- a/Index.html
+++ b/Index.html
@@ -7,28 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Developer Portfolio</title>
 
-
     <!--  Bootstrap css file  -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 
     <!--  font awesome icons  -->
     <link rel="stylesheet" href="./css/all.min.css">
 
-
-    <!--  Magnific Popup css file  -->
-    <link rel="stylesheet" href="./vendor/Magnific-Popup/dist/magnific-popup.css">
-
-
-    <!--  Owl-carousel css file  -->
-    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.default.min.css">
-
-
     <!--  custom css file  -->
     <link rel="stylesheet" href="./css/style.css">
 
     <!--  Responsive css file  -->
     <link rel="stylesheet" href="./css/responsive.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
@@ -40,10 +31,11 @@
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#"><h2>ABGTH</h2></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
@@ -88,9 +80,9 @@
                         <h4 class="title-text text-uppercase">Golang Developer</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
-                                <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
+                                <button type="button" class="btn button primary-button mr-4 text-uppercase" id="hire-bt">hire
                                     me</button>
-                                <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
+                                <a href="./resume/resume.pdf" target="blank" class="btn button secondary-button text-uppercase">Get cv</a>
                             </div>
                         </div>
                     </div>
@@ -126,7 +118,7 @@
                                 Looking for opportunities as a software developer with an expert team of developers who will help advance my career progression to senior positions in the future.
                             </p>
                         </div>
-                        <button type="button" class="btn button primary-button text-uppercase">Download cv</button>
+                        <a href="./resume/resume.pdf" target="blank" class="btn button primary-button text-uppercase">Download cv</a>
                     </div>
                 </div>
             </div>
@@ -281,16 +273,8 @@
                     <h1 class="text-uppercase title-h1">Quality Work</h1>
                 </div>
 
-                <div class="button-group">
-                    <button type="button" class="active" id="btn1" data-filter="*">All</button>
-                    <button type="button" data-filter=".popular">Popular</button>
-                    <button type="button" data-filter=".latest">Latest</button>
-                    <button type="button" data-filter=".following">Following</button>
-                    <button type="button" data-filter=".upcoming">Upcoming</button>
-                </div>
-
                 <div class="row grid">
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="our-project">
                             <div class="img">
                                 <a href="https://github.com/x-abgth/new-bike-selling">
@@ -303,7 +287,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="our-project">
                             <div class="img">
                                 <a href="https://github.com/x-abgth/lite_chat">
@@ -316,7 +300,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="our-project">
                             <div class="img">
                                 <a href="https://github.com/x-abgth/two-dos">
@@ -329,7 +313,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="our-project">
                             <div class="img">
                                 <a href="https://github.com/x-abgth/portfolio_app">
@@ -361,7 +345,7 @@
 
         <!--  ======================= End Project Area =============================  -->
 
-        <!--  ========================== Subscribe me Area ============================  -->
+        <!--  ========================== Contact me Area ============================  -->
         <section class="subscribe-us-area" id="contact-area">
             <div class="container subscribe">
                 <div class="row">
@@ -371,20 +355,18 @@
                     </div>
                 </div>
                 <div class="d-sm-flex justify-content-center">
-                    <form class="w-50" id="contact-form">
+                     <form class="w-50" id="submit-form" action="">
                         <div class="row d-flex flex-row flex-wrap">
                              <div class="col input-textbox">
                                 <input name="username" type="text" id="txtname" class="form-control" placeholder="Name">
-                                <!-- <label id="error-code-name">Please enter a valid name</label> -->
                             </div>
 
                             <div class="col input-textbox">
                                 <input name="usermail" type="text" id="txtemail" class="form-control" placeholder="Email">
-                                <!-- <label id="error-code-mail">Please enter a valid email address</label> -->
                             </div>
 
                             <div class="col textAreaExample1">
-                                <textarea type="text" name="msg" id="textAreaExample1" class="form-control" cols="50" rows="20" placeholder="Send something nice!"></textarea>
+                                <textarea name="message" class="form-control rounded-0" id="textAreaExample1" cols="50" rows="20" placeholder="Send something nice!"></textarea>
                             </div>
                             
                             <div class="col">
@@ -397,7 +379,7 @@
                 </div>
             </div>
         </section>
-        <!--  ========================== End Subscribe me Area ============================  -->
+        <!--  ========================== End Contact me Area ============================  -->
 
 
     </main>
@@ -417,21 +399,11 @@
         </div>
     </footer>
 
-
     <!--  Jquery js file  -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <!--  Bootstrap js file  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-    <!--  isotope js library  -->
-    <script src="./vendor/isotope/isotope.min.js"></script>
-
-    <!--  Magnific popup script file  -->
-    <script src="./vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
-
-    <!--  Owl-carousel js file  -->
-    <script src="./vendor/owl-carousel/js/owl.carousel.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
 
