--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
                                 <label id="email-error"></label>
                             </div>
 
-                            <div class="col textAreaExample1">
-                                <textarea name="message" class="form-control rounded-0" id="textAreaExample1" cols="50" rows="20" placeholder="Send something nice!" onkeyup="validateMsg()"></textarea>
+                            <div class="col textAreaExample1 input-textbox">
+                                <textarea name="message" class="form-control rounded-2" id="textAreaExample1" cols="50" rows="20" placeholder="Send something nice!" onkeyup="validateMsg()"></textarea>
                                 <label id="msg-error"></label>
                             </div>
                             
